[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tortured-phrase"
version = "0.1.0"
description = "Benchmark for tortured phrase detection by LLM"
authors = [{name = "hahuyhoang411"}]
dependencies = [
    "pandas",
    "numpy",
    "openai",  # for LLM
    "pytest",  # for testing
]

[tool.setuptools.packages.find]
where = ["src"]